--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,19 +10,23 @@ jobs:
       - uses: actions/checkout@v2
       - run: sudo apt install build-essential
       - uses: actions-rs/toolchain@v1
+        name: Install toolchain
         with:
           profile: minimal
           toolchain: nightly
           override: true
           components: rustfmt, clippy
       - uses: actions-rs/cargo@v1
+        name: Check formatting
         with:
           command: fmt
           args: -- --check
       - uses: actions-rs/cargo@v1
+        name: Run clippy
         with:
           command: clippy
           args: -- -D warnings
       - uses: actions-rs/cargo@v1
+        name: Run tests
         with:
           command: test
