--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "col"
+name = "clm"
 version = "0.1.0"
 edition = "2018"
 
@@ -12,5 +12,5 @@ regex = "1.5"
 structopt = { version = "0.3.22", features = [ "paw" ] }
 
 [[bin]]
-name = "col"
+name = "clm"
 path = "src/main.rs"
